--- a/mandelbulber2/formula/ui/transf_difs_helix_v2.ui
+++ b/mandelbulber2/formula/ui/transf_difs_helix_v2.ui
@@ -308,10 +308,10 @@
            <number>6</number>
           </property>
           <property name="minimum">
-           <double>-99.998999999999995</double>
+           <double>0.000000000000000</double>
           </property>
           <property name="maximum">
-           <double>99.998999999999995</double>
+           <double>999.999000000000024</double>
           </property>
           <property name="singleStep">
            <double>0.100000000000000</double>
@@ -364,6 +364,13 @@
        <widget class="MyCheckBox" name="checkBox_transf_function_enabledSw_false">
         <property name="text">
          <string>swap zy</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="MyCheckBox" name="checkBox_transf_function_enabledS_false">
+        <property name="text">
+         <string>swap neg</string>
         </property>
        </widget>
       </item>
